--- a/FeelingsRecord/app/src/main/res/layout/activity_main.xml
+++ b/FeelingsRecord/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="테스트 앨범 버튼"
+        tools:layout_editor_absoluteX="145dp"
+        tools:layout_editor_absoluteY="256dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
