--- a/FeelingsRecord/app/src/main/res/layout/feel_photo.xml
+++ b/FeelingsRecord/app/src/main/res/layout/feel_photo.xml
@@ -4,8 +4,8 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical" >
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <GridView
+        android:id="@+id/gridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
