--- a/FeelingsRecord/app/src/main/res/layout/photo_item.xml
+++ b/FeelingsRecord/app/src/main/res/layout/photo_item.xml
@@ -3,24 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
+    <ImageView
+        android:id="@+id/photos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#FFFFFFFF"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true"
-        android:layout_gravity="center">
+        android:layout_gravity="center_vertical"
+        android:padding="2dp"
+        app:srcCompat="@mipmap/ic_launcher" />
 
+    <!--<Button
+        android:id="@+id/return_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="돌아가기"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />-->
 
-            <ImageView
-                android:id="@+id/photos"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:padding="5dp"
-                app:srcCompat="@mipmap/ic_launcher" />
-
-    </androidx.cardview.widget.CardView>
 </LinearLayout>
