--- a/FeelingsRecord/app/src/main/res/layout/activity_feelwrite.xml
+++ b/FeelingsRecord/app/src/main/res/layout/activity_feelwrite.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -110,7 +111,7 @@
 
 
             <EditText
-                android:id="@+id/inputText"
+                android:id="@+id/content"
                 android:layout_width="328dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
