--- a/FeelingsRecord/app/src/main/res/layout/activity_feelwrite.xml
+++ b/FeelingsRecord/app/src/main/res/layout/activity_feelwrite.xml
@@ -102,10 +102,7 @@
             android:gravity="center"
             android:orientation="vertical">
 
-<<<<<<< Updated upstream
-=======
 
->>>>>>> Stashed changes
             <EditText
                 android:id="@+id/inputText"
                 android:layout_width="328dp"
@@ -122,35 +119,24 @@
                 android:textColorLink="#009688"
                 android:textSize="18sp" />
 
-<<<<<<< Updated upstream
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="328dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:foregroundGravity="right"
-                app:srcCompat="@drawable/imginput"
-                tools:ignore="VectorDrawableCompat" />
-=======
 
             <LinearLayout
-                android:layout_width="328dp"
+                android:layout_width="wrap_content"
                 android:layout_height="400dp"
-                android:scaleType="fitCenter"
-                android:orientation="vertical">
+                android:gravity="top"
+                android:orientation="vertical"
+                android:scaleType="centerInside">
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="328dp"
                     android:layout_height="wrap_content"
-
-                    android:layout_gravity="center"
-                    android:foregroundGravity="right"
+                    android:gravity="top"
+                    android:scaleType="centerInside"
                     app:srcCompat="@drawable/imginput"
                     tools:ignore="VectorDrawableCompat" />
             </LinearLayout>
 
->>>>>>> Stashed changes
 
         </LinearLayout>
 
