--- a/FeelingsRecord/app/src/main/res/layout/activity_feelwrite.xml
+++ b/FeelingsRecord/app/src/main/res/layout/activity_feelwrite.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -91,9 +99,6 @@
 
     </LinearLayout>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -117,7 +122,7 @@
                 android:layout_marginTop="20dp"
                 android:ems="10"
                 android:hint="왜 이런 기분이 들었나요?"
-                android:inputType="textPersonName"
+                android:inputType="text"
                 android:lineSpacingExtra="5sp"
                 android:singleLine="true"
                 android:textColor="#94000000"
@@ -125,12 +130,9 @@
                 android:textColorHint="#99858383"
                 android:textColorLink="#009688"
                 android:textSize="18sp" />
-
-
-
         </LinearLayout>
-
-
+    </LinearLayout>
+    </ScrollView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -155,5 +157,5 @@
                 app:fabSize="auto"
                 app:rippleColor="#ABFFFFFF" />
         </LinearLayout>
-    </FrameLayout>
-</LinearLayout>
+
+</FrameLayout>
