--- a/FeelingsRecord/app/src/main/res/layout/data_cardview.xml
+++ b/FeelingsRecord/app/src/main/res/layout/data_cardview.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
+            <ImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
