--- a/FeelingsRecord/app/src/main/res/layout/fragment_feel.xml
+++ b/FeelingsRecord/app/src/main/res/layout/fragment_feel.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp">
 
-        <com.feelings.record.calchart.
+        <com.feelings.cal.view.FeelDisplayView
             android:id="@+id/chart_very_happy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
