--- a/FeelingsRecord/app/src/main/res/layout/data_cardview.xml
+++ b/FeelingsRecord/app/src/main/res/layout/data_cardview.xml
@@ -20,7 +20,7 @@
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:text="sss" />
 
             <LinearLayout
