--- a/FeelingsRecord/app/src/main/res/layout/activity_feelwrite.xml
+++ b/FeelingsRecord/app/src/main/res/layout/activity_feelwrite.xml
@@ -173,7 +173,7 @@
 
             <View
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -182,10 +182,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginEnd="220dp"
-                android:layout_marginRight="30dp"
                 android:layout_marginBottom="33dp"
                 android:clickable="true"
+                android:visibility="invisible"
                 android:src="@drawable/minus_circle"
                 android:tint="#FFFFFF"
                 app:backgroundTint="#C4195537"
@@ -196,8 +195,8 @@
 
             <View
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_height="wrap_content"
+                android:layout_weight="10" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
 
@@ -205,8 +204,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|right"
-                android:layout_marginEnd="28dp"
-                android:layout_marginRight="30dp"
                 android:layout_marginBottom="33dp"
                 android:clickable="true"
                 android:src="@drawable/plus_circle"
@@ -216,5 +213,9 @@
                 app:elevation="3dp"
                 app:fabSize="auto"
                 app:rippleColor="#ABFFFFFF" />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
         </LinearLayout>
 </FrameLayout>
