--- a/FeelingsRecord/app/src/main/res/menu/popupmenu.xml
+++ b/FeelingsRecord/app/src/main/res/menu/popupmenu.xml
@@ -14,5 +14,8 @@
     <item
         android:id="@+id/c"
         android:title="설정" />
+    <item
+        android:id="@+id/habitSetting"
+        android:title="습관 알람"/>
 </menu>
 
