--- a/FeelingsRecord/app/src/main/res/layout/activity_habit_alarm.xml
+++ b/FeelingsRecord/app/src/main/res/layout/activity_habit_alarm.xml
@@ -128,6 +128,15 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/settingButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:layout_gravity="center"
+            android:text="확인"/>
+
     </LinearLayout>
 
 </LinearLayout>
