--- a/FeelingsRecord/app/src/main/res/layout/activity_feelwrite.xml
+++ b/FeelingsRecord/app/src/main/res/layout/activity_feelwrite.xml
@@ -127,7 +127,7 @@
 
 
             <EditText
-                android:id="@+id/content"
+                android:id="@+id/writeContent"
                 android:layout_width="328dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="0dp"
