--- a/FeelingsRecord/app/src/main/res/layout/backup.xml
+++ b/FeelingsRecord/app/src/main/res/layout/backup.xml
@@ -20,7 +20,7 @@
 
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/backupButton"
 
         android:layout_width="309dp"
         android:layout_height="36dp"
